Added boilerplate for the campgrounds CRUD pages

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create new Campground</title>
-</head>
-<body>
+<% layout('layouts/boilerplate') -%> 
     <h1>Add new Campground</h1>
     <a href="/campgrounds/">Back to Campgrounds</a>
     <form method="post" action="/campgrounds/new">
@@ -20,5 +12,3 @@
           </div>
           <button type="submit">Add</button>
     </form>
-</body>
-</html>
