--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YelpCamp - Campgrounds</title>
-</head>
-<body>
+<% layout('layouts/boilerplate') -%> 
     <h1>Campgrounds</h1>
     <a href="/campgrounds/new">Add New Campground</a>
     <ul>
@@ -14,5 +6,3 @@
             <li><b><a href="/campgrounds/<%= camp._id %>"><%= camp.title %></a></b> - <%= camp.location %></li>
         <% } %>
     </ul>
-</body>
-</html>
