--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,14 +1,34 @@
 <% layout('layouts/boilerplate') -%> 
-    <h1>Edit Campground</h1>
+<div class="row">
+  <h1 class="text-center">Edit Campground</h1>
+  <div class="col-6 offset-3">
     <form method="post" action="/campgrounds/<%= campground._id %>/edit?_method=put">
-        <div>
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="campground[title]" value="<%= campground.title %>">
-          </div>
-          <div>
-            <label for="location">Location:</label>
-            <input type="text" id="location" name="campground[location]" value="<%= campground.location %>">
-          </div>
-          <button type="submit">Edit</button>
-          <a href="/campgrounds/<%= campground._id %>">Cancel</a>
+      <div class="form-group mb-2">
+        <label for="title">Title:</label>
+        <input type="text" class="form-control" id="title" name="campground[title]" value="<%= campground.title %>">
+      </div>
+      <div class="form-group mb-2">
+        <label for="location">Location:</label>
+        <input type="text" class="form-control" id="location" name="campground[location]" value="<%= campground.location %>">
+      </div>
+      <div class="form-group mb-2">
+        <label for="description">Description:</label>
+        <textarea type="text" class="form-control" id="description" name="campground[description]" rows="4"><%= campground.description %></textarea>
+      </div>
+      <div class="form-group mb-2">
+        <label for="price">Price:</label>
+        <input type="text" class="form-control" id="price" name="campground[price]" value="<%= campground.price %>">
+      </div>
+      <div class="form-group mb-2">
+        <label for="image">Image URL:</label>
+        <input type="text" class="form-control" id="image" name="campground[image]" value="<%= campground.image %>">
+      </div>
+      <div class="form-group mb-2">
+        <button type="submit" class="btn btn-info text-white">Update Campground</button>
+      </div>
+      <div class="form-group mb-2">
+        <a href="/campgrounds/<%= campground._id %>">Cancel</a>
+      </div>
     </form>
+  </div>
+</div>
