--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,8 +1,25 @@
 <% layout('layouts/boilerplate') -%> 
-    <h1>Campgrounds</h1>
-    <a href="/campgrounds/new">Add New Campground</a>
-    <ul>
-        <% for(let camp of campgrounds) { %>
-            <li><b><a href="/campgrounds/<%= camp._id %>"><%= camp.title %></a></b> - <%= camp.location %></li>
-        <% } %>
-    </ul>
+<h1>Campgrounds</h1>
+<a href="/campgrounds/new">Add New Campground</a>
+    <% for(let camp of campgrounds) { %>
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="card-img" src="<%= camp.image %>" alt="Campground Image">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h2 class="card-title"><%= camp.title %></h2>
+                        <p class="card-text">            
+                            <b >Price: </b>$<%= camp.price %> <br>
+                            <%= camp.description %> 
+                        </p>
+                        <p class="card-subtitle text-muted mb-3">
+                            <small><%= camp.location %></small>
+                        </p>
+                        <a href="/campgrounds/<%= camp._id %>" class="btn btn-primary">View <%= camp.title %></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <% } %>
