--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,10 +1,25 @@
 <% layout('layouts/boilerplate') -%> 
-    <h1><%= campground.title %></h1>
-    <h2><%= campground.location %></h2>
-    <a href="/campgrounds/<%= campground._id %>/edit">Edit</a> 
-    <form action="/campgrounds/<%= campground._id %>?_method=delete" method="post">
-        <button>Delete</button>
-    </form>
-    <footer>
-        <a href="/campgrounds">Back to Campgrounds</a>
-    </footer>
+<div class="row mb-3">
+    <div class="col-6 offset-3">
+        <div class="card">
+            <img class="card-img-top" src="<%= campground.image %>" alt="Image of Campground">
+            <div class="card-body">
+              <h1 class="card-title"><%= campground.title %></h1>
+              <p><small class="text-muted"><%= campground.location %></small></p>
+              <p class="card-text"><%= campground.description %></p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><b>Price:</b> $<%= campground.price %>/night</li>
+            </ul>
+            <div class="card-body">
+                <a class="card-link btn btn-info text-white" href="/campgrounds/<%= campground._id %>/edit">Edit</a> 
+                <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=delete" method="post">
+                    <button class="btn btn-danger">Delete</button>
+                </form>
+            </div>
+            <div class="card-footer text-muted">
+                3 days ago
+            </div>
+        </div>
+    </div>
+</div>
