Added client-side form validation

--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -11,7 +11,7 @@
                     <div class="card-body">
                         <h2 class="card-title"><%= camp.title %></h2>
                         <p class="card-text">            
-                            <b >Price: </b>$<%= camp.price %> <br>
+                            <b >Price: </b>$<%= camp.price %>/night <br>
                             <%= camp.description %> 
                         </p>
                         <p class="card-subtitle text-muted mb-3">
