--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,29 +2,59 @@
 <div class="row">
   <h1 class="text-center">Add New Campground</h1>
   <div class="col-6 offset-3">
-    <form method="post" action="/campgrounds/new">
+    <form class="needs-validation" method="post" action="/campgrounds/new" novalidate>
       <div class="form-group mb-2">
-          <label for="title">Title:</label>
-          <input type="text" class="form-control" id="title" name="campground[title]" placeholder="Camp Lazlo">
+          <label for="title" class="form-label">Title:</label>
+          <input type="text" class="form-control" id="title" name="campground[title]" placeholder="Camp Lazlo" required>
+          <div class="valid-feedback">
+            Looks good.
+          </div>
+          <div class="invalid-feedback">
+            Please enter campground name.
+          </div>
         </div>
         <div class="form-group mb-2">
-          <label for="location">Location:</label>
-          <input type="text" class="form-control" id="location" name="campground[location]" placeholder="Los Angeles, California">
+          <label for="location" class="form-label">Location:</label>
+          <input type="text" class="form-control" id="location" name="campground[location]" placeholder="Los Angeles, California" required>
+          <div class="valid-feedback">
+            Looks good.
+          </div>
+          <div class="invalid-feedback">
+            Please enter campground location.
+          </div>
         </div>
         <div class="form-group mb-2">
-          <label for="description">Description:</label>
-          <textarea type="text" class="form-control" id="description" name="campground[description]" placeholder="Best camping ground we've been in, definitely a family fave!" rows="4"></textarea>
+          <label for="description" class="form-label">Description:</label>
+          <textarea type="text" class="form-control" id="description" name="campground[description]" placeholder="Best camping ground we've been in, definitely a family fave!" rows="4" required></textarea>
+          <div class="valid-feedback">
+            Looks good.
+          </div>
+          <div class="invalid-feedback">
+            Please enter description about campground.
+          </div>
         </div>
         <div class="form-group mb-2">
           <label for="price" class="form-label">Campground Price:</label>
           <div class="input-group">
             <span class="input-group-text" id="price-label">$</span>
-            <input type="text" class="form-control" id="price" placeholder="0.00" name="campground[price]" aria-label="price" aria-describedby="price-label">
+            <input type="text" class="form-control" id="price" placeholder="0.00" name="campground[price]" aria-label="price" aria-describedby="price-label" required>
+            <div class="valid-feedback">
+              Looks good.
+            </div>
+            <div class="invalid-feedback">
+              Please enter pricing per night.
+            </div>
           </div>
         </div>
         <div class="form-group mb-2">
-          <label for="image">Image URL:</label>
-          <input type="text" class="form-control" id="image" name="campground[image]" placeholder="https://imagelink.com/example">
+          <label for="image" class="form-label">Image URL:</label>
+          <input type="text" class="form-control" id="image" name="campground[image]" placeholder="https://imagelink.com/example" required>
+          <div class="valid-feedback">
+            Looks good.
+          </div>
+          <div class="invalid-feedback">
+            Please enter image link of campground.
+          </div>
         </div>
         <div class="form-group mb-2">
           <button type="submit" class="btn btn-success">Add Campground</button>
@@ -33,3 +63,4 @@
     </form>
   </div>
 </div>
+<script src="/static/js/formValidation.js"></script>
