--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,26 +2,56 @@
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
   <div class="col-6 offset-3">
-    <form method="post" action="/campgrounds/<%= campground._id %>/edit?_method=put">
+    <form class="needs-validation" method="post" action="/campgrounds/<%= campground._id %>/edit?_method=put" novalidate>
       <div class="form-group mb-2">
         <label for="title">Title:</label>
-        <input type="text" class="form-control" id="title" name="campground[title]" value="<%= campground.title %>">
+        <input type="text" class="form-control" id="title" name="campground[title]" value="<%= campground.title %>" required>
+        <div class="valid-feedback">
+          Looks good.
+        </div>
+        <div class="invalid-feedback">
+          Please enter campground name.
+        </div>
       </div>
       <div class="form-group mb-2">
         <label for="location">Location:</label>
-        <input type="text" class="form-control" id="location" name="campground[location]" value="<%= campground.location %>">
+        <input type="text" class="form-control" id="location" name="campground[location]" value="<%= campground.location %>" required>
+        <div class="valid-feedback">
+          Looks good.
+        </div>
+        <div class="invalid-feedback">
+          Please enter campgraound location.
+        </div>
       </div>
       <div class="form-group mb-2">
         <label for="description">Description:</label>
-        <textarea type="text" class="form-control" id="description" name="campground[description]" rows="4"><%= campground.description %></textarea>
+        <textarea type="text" class="form-control" id="description" name="campground[description]" rows="4" required><%= campground.description %></textarea>
+        <div class="valid-feedback">
+          Looks good.
+        </div>
+        <div class="invalid-feedback">
+          Please enter description about campground.
+        </div>
       </div>
       <div class="form-group mb-2">
         <label for="price">Price:</label>
-        <input type="text" class="form-control" id="price" name="campground[price]" value="<%= campground.price %>">
+        <input type="text" class="form-control" id="price" name="campground[price]" value="<%= campground.price %>" required>
+        <div class="valid-feedback">
+          Looks good.
+        </div>
+        <div class="invalid-feedback">
+          Please enter pricing per night.
+        </div>
       </div>
       <div class="form-group mb-2">
         <label for="image">Image URL:</label>
-        <input type="text" class="form-control" id="image" name="campground[image]" value="<%= campground.image %>">
+        <input type="text" class="form-control" id="image" name="campground[image]" value="<%= campground.image %>" required>
+        <div class="valid-feedback">
+          Looks good.
+        </div>
+        <div class="invalid-feedback">
+          Please enter image link of campground.
+        </div>
       </div>
       <div class="form-group mb-2">
         <button type="submit" class="btn btn-info text-white">Update Campground</button>
@@ -32,3 +62,4 @@
     </form>
   </div>
 </div>
+<script src="/static/js/formValidation.js"></script>
