--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') -%> 
 <div class="row mb-3">
-    <div class="col-6 offset-3">
-        <div class="card">
+    <div class="col-6">
+        <div class="card mb-4">
             <img class="card-img-top" src="<%= campground.image %>" alt="Image of Campground">
             <div class="card-body">
               <h1 class="card-title"><%= campground.title %></h1>
@@ -22,4 +22,50 @@
             </div>
         </div>
     </div>
+    <div class="col-6 mb-4">
+        <div class="mb-4">
+            <h2>Leave a review</h2>
+            <form class="needs-validation" method="post" action="/campgrounds/<%= campground._id %>/reviews" novalidate>
+                <div class="form-group mb-2">
+                    <label for="rating" class="form-label">Rating:</label>
+                    <input type="range" class="form-range" id="rating" name="review[rating]" min="1" max="5">
+                    <div class="valid-feedback">
+                    Looks good.
+                    </div>
+                    <div class="invalid-feedback">
+                    Please enter a rating.
+                    </div>
+                </div>
+                <div class="form-group mb-2">
+                    <label for="body" class="form-label">Review:</label>
+                    <textarea class="form-control" id="body" name="review[body]" rows="3" placeholder="We loved our stay at this campground!" required></textarea>
+                    <div class="valid-feedback">
+                    Looks good.
+                    </div>
+                    <div class="invalid-feedback">
+                    Please enter your review.
+                    </div>
+                </div>
+                <div class="form-group mb-2">
+                    <button type="submit" class="btn btn-success">Add Review</button>
+                    <a class="btn btn-danger" href="/reviews">Cancel</a>
+                </div>
+            </form>
+        </div>
+        <div class="mb-4">
+            <h2>Reviews</h2>
+            <% for( let review of campground.reviews) { %>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <h3 class="card-title">Rating: <%= review.rating %></h3>
+                    <p class="card-text">Review: <%= review.body %></p>
+                    <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="post">
+                        <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                    </form>
+                </div>
+            </div>
+            <% } %>
+        </div>
+    </div>
 </div>
+<script src="/static/js/formValidation.js"></script>
