--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -10,6 +10,7 @@
 <body class="d-flex flex-column vh-100">
     <%- partial('partials/navbar') %> 
     <main class="container mt-3">
+        <%- partial('partials/flash') %> 
         <%- body -%> 
     </main>
     <%- partial('partials/footer') %> 
