--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -2,7 +2,7 @@
 <div class="row">
   <h1 class="text-center">Add New Campground</h1>
   <div class="col-6 offset-3">
-    <form class="needs-validation" method="post" action="/campgrounds/new" novalidate>
+    <form class="needs-validation" method="post" action="/campgrounds/new" enctype="multipart/form-data" novalidate>
       <div class="form-group mb-2">
           <label for="title" class="form-label">Title:</label>
           <input type="text" class="form-control" id="title" name="campground[title]" placeholder="Camp Lazlo" required>
@@ -48,7 +48,7 @@
         </div>
         <div class="form-group mb-2">
           <label for="image" class="form-label">Image URL:</label>
-          <input type="text" class="form-control" id="image" name="campground[image]" placeholder="https://imagelink.com/example" required>
+          <input type="file" name="campground[image]" multiple/>
           <div class="valid-feedback">
             Looks good.
           </div>
