--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,7 +5,7 @@
         <div class="card mb-3">
             <div class="row">
                 <div class="col-md-4">
-                    <img class="card-img" src="<%= camp.image %>" alt="Campground Image">
+                    <img class="card-img" src="<%= camp.image[0].imageUrl %>" alt="Campground Image">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
