--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -2,7 +2,24 @@
 <div class="row mb-3">
     <div class="col-6">
         <div class="card mb-4">
-            <img class="card-img-top" src="<%= campground.image %>" alt="Image of Campground">
+            <!-- <img class="card-img-top" src="<%= campground.image[0].imageUrl %>" alt=""> -->
+            <div id="campgroundCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                  <% campground.image.forEach((img, i) => { %>
+                    <div class="carousel-item <%= (i === 0) ? 'active' : '' %>">
+                        <img src="<%= campground.image[i].imageUrl %>" class="card-img-top d-block w-100" alt="">
+                      </div>
+                  <% }) %> 
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#campgroundCarousel" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#campgroundCarousel" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
             <div class="card-body">
               <h1 class="card-title"><%= campground.title %></h1>
               <p><small class="text-muted"><%= campground.location %></small></p>
