--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row">
   <h1 class="text-center">Edit Campground</h1>
   <div class="col-6 offset-3">
-    <form class="needs-validation" method="post" action="/campgrounds/<%= campground._id %>/edit?_method=put" novalidate>
+    <form class="needs-validation" method="post" action="/campgrounds/<%= campground._id %>/edit?_method=put" enctype="multipart/form-data" novalidate>
       <div class="form-group mb-2">
         <label for="title">Title:</label>
         <input type="text" class="form-control" id="title" name="campground[title]" value="<%= campground.title %>" required>
@@ -44,8 +44,8 @@
         </div>
       </div>
       <div class="form-group mb-2">
-        <label for="image">Image URL:</label>
-        <input type="text" class="form-control" id="image" name="campground[image]" value="<%= campground.image %>" required>
+        <label for="image">Add images:</label>
+        <input type="file" class="form-control" id="image" name="campground[image]" multiple/>
         <div class="valid-feedback">
           Looks good.
         </div>
