--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -48,7 +48,7 @@
         </div>
         <div class="form-group mb-2">
           <label for="image" class="form-label">Image URL:</label>
-          <input type="file" name="campground[image]" multiple/>
+          <input type="file" class="form-control" id="image" name="campground[image]" multiple/>
           <div class="valid-feedback">
             Looks good.
           </div>
