Users can delete images from their campground & deleting images or campgrounds propagates to cloudinary source

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -44,13 +44,24 @@
         </div>
       </div>
       <div class="form-group mb-2">
-        <label for="image">Add images:</label>
+        <label for="image">Add additional images:</label>
         <input type="file" class="form-control" id="image" name="campground[image]" multiple/>
         <div class="valid-feedback">
           Looks good.
         </div>
         <div class="invalid-feedback">
           Please enter image link of campground.
+        </div>
+      </div>
+      <div class="form-group mb-2">
+        <label for="">Select images to remove:</label>
+        <div class="d-flex justify-content-between w-75">
+          <% campground.image.forEach((img, i) => { %>
+            <div class="form-check p-0">
+              <label for="img-<%= i %>"><img src="<%= img.thumbnail %>" alt=""></label>
+              <input class="form-check-input position-relative top-10 start-50" type="checkbox" name="deleteImgs[]" value="<%= img.filename %>" id="img-<%= i %>">
+            </div>
+          <% }) %> 
         </div>
       </div>
       <div class="form-group mb-2">
