--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -42,7 +42,7 @@
         </div>
     </div>
     <div class="col-6 mb-4">
-        <div id='map'></div>
+        <div id='map' class="mb-3"></div>
         <% if (currentUser) {%>
         <div class="mb-4">
             <h2>Leave a review</h2>
