--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,28 +1,35 @@
-<% layout('layouts/boilerplate') -%> 
-<h1>Login</h1>
-<form class="needs-validation" action="/login" method="post" novalidate>
-    <div class="form-group mb-2">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" name="username" placeholder="Enter username" required>
-      <div class="valid-feedback">
-        Looks good.
-      </div>
-      <div class="invalid-feedback">
-        Username required.
-      </div>
+<% layout('layouts/boilerplate') -%>
+<div class="d-flex justify-content-center">
+  <div class="card w-25 shadow">
+    <img src="https://images.unsplash.com/photo-1592351763700-b9b35a6465ea?ixlib=rb-1.2.1&raw_url=true&q=80&fm=jpg&crop=entropy&cs=tinysrgb&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740" class="card-img-top" alt="">
+    <div class="card-body">
+      <h1 class="card-title">Login</h1>
+      <form class="needs-validation" action="/login" method="post" novalidate>
+        <div class="form-group mb-2">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" id="username" name="username" placeholder="Enter username" required>
+          <div class="valid-feedback">
+            Looks good.
+          </div>
+          <div class="invalid-feedback">
+            Username required.
+          </div>
+        </div>
+        <div class="form-group mb-2">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
+          <div class="valid-feedback">
+            Looks good.
+          </div>
+          <div class="invalid-feedback">
+            Password required.
+          </div>
+        </div>
+        <div class="form-group mb-2">
+          <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+    </form>
     </div>
-    <div class="form-group mb-2">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
-      <div class="valid-feedback">
-        Looks good.
-      </div>
-      <div class="invalid-feedback">
-        Password required.
-      </div>
-    </div>
-    <div class="form-group mb-2">
-      <button type="submit" class="btn btn-primary">Login</button>
-    </div>
-</form>
+  </div>
+</div>
 <script src="/static/js/formValidation.js"></script>
