--- a/views/auth/register.ejs
+++ b/views/auth/register.ejs
@@ -1,39 +1,46 @@
 <% layout('layouts/boilerplate') -%> 
-<h1>Register</h1>
-<form class="needs-validation" action="/register" method="post" novalidate>
-    <div class="form-group mb-2">
-      <label for="username">Username</label>
-      <input type="text" class="form-control" id="username" name="user[username]" placeholder="Enter username" required>
-      <div class="valid-feedback">
-        Looks good.
-      </div>
-      <div class="invalid-feedback">
-        Username required.
-      </div>
-    </div>
-    <div class="form-group mb-2">
-        <label for="email">Email address</label>
-        <input type="email" class="form-control" id="email" name="user[email]" aria-describedby="emailHelp" placeholder="Enter email" required>
-        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        <div class="valid-feedback">
+<div class="d-flex justify-content-center">
+  <div class="card w-25 shadow">
+    <img src="https://images.unsplash.com/photo-1496545672447-f699b503d270?crop=entropy&cs=tinysrgb&fm=jpg&ixlib=rb-1.2.1&q=80&raw_url=true&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1742" class="card-img-top" alt="">
+    <div class="card-body">
+      <h1 class="card-title">Register</h1>
+      <form class="needs-validation" action="/register" method="post" novalidate>
+        <div class="form-group mb-2">
+          <label for="username">Username</label>
+          <input type="text" class="form-control" id="username" name="user[username]" placeholder="Enter username" required>
+          <div class="valid-feedback">
             Looks good.
           </div>
           <div class="invalid-feedback">
-            Email required.
+            Username required.
           </div>
-      </div>
-    <div class="form-group mb-2">
-      <label for="password">Password</label>
-      <input type="password" class="form-control" id="password" name="user[password]" placeholder="Password" required>
-      <div class="valid-feedback">
-        Looks good.
-      </div>
-      <div class="invalid-feedback">
-        Password required.
-      </div>
+        </div>
+        <div class="form-group mb-2">
+            <label for="email">Email address</label>
+            <input type="email" class="form-control" id="email" name="user[email]" aria-describedby="emailHelp" placeholder="Enter email" required>
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            <div class="valid-feedback">
+                Looks good.
+              </div>
+              <div class="invalid-feedback">
+                Email required.
+              </div>
+          </div>
+        <div class="form-group mb-2">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" id="password" name="user[password]" placeholder="Password" required>
+          <div class="valid-feedback">
+            Looks good.
+          </div>
+          <div class="invalid-feedback">
+            Password required.
+          </div>
+        </div>
+        <div class="form-group mb-2">
+          <button type="submit" class="btn btn-primary">Login</button>
+        </div>
+    </form>
     </div>
-    <div class="form-group mb-2">
-      <button type="submit" class="btn btn-primary">Login</button>
-    </div>
-</form>
+  </div>
+</div>
 <script src="/static/js/formValidation.js"></script>
